# demo_test

./: .gitignore  README.md  conftest.py  pyproject.toml
config/: settings.py
pages/: base_page.py  registration_page.py  registration_submit_modal.py
tests/: test_registration.py
ui_dataclasses/: hobby_dataclass.py  month_dataclass.py  student_dataclass.py
ui_enums/: hobbies_enum.py  month_enum.py
ui_generators/: student_generator.py
